feat: gha java upgrade merge (#1145)
* fix: remove unnecessary process start and stop in tests

* fix: usermetadata and userroles

* fix: delete app in kill

* fix: email password tests

* fix: email verification tests

* fix: dashboard tests

* fix: account linking tests

* fix: passwordless tests

* fix: passwordless tests

* fix: thirdparty tests

* fix: jwt tests

* fix: mfa tests

* fix: oauth tests

* fix: webauthn tests

* fix: useridmapping tests

* fix: totp tests

* fix: session tests

* fix: auth recipe tests

* fix: refactor testing process and fix all tests

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: unit test gha

* fix: mongo tests

* fix: mongo tests

* fix: gha

* fix: flaky

* fix: compile error

* fix: tests

* fix: for mongo

* fix: tests

* fix: tests

* fix: tests

* fix: tests

* fix: tests

* fix: tests

* fix: tests

* fix: tests

* fix: disable speed test

* fix: one million users test

* fix: test update

* fix: sqlite test

* fix: tests

* fix: working test parallelisation for in-memory

* fix: more parallelism

* fix: trying arm

* fix: ubuntu

* fix: ee tests

* fix: increase retry

* fi